--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Etch-A-Sketch</title>
   <meta charset="UTF-8"/>
-  <style>
-      /* add style to the page */
-      
-  </style>
+  <link rel="stylesheet" href="etch.css"></link>
+  <script src="etch.js"></script>
 </head>
 <body>
-    
-    <script>
-  
-    </script>
+    <!-- container to store the grid -->
+    <div id="container">
+
+    </div>
 </body>
 </html>
