--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <link rel="stylesheet" href="etch.css"></link>
 </head>
 <body>
+
+  <button id="button">Reset</button>
     <!-- container to store the grid -->
     <div id="container">
-
+     
     </div>
 
     <script src="etch.js"></script>
